Mobile View done
Mobile view is done, now I need to work on desktop view as well as functionality

--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -1,10 +1,12 @@
 :root {
   --white: #ffffff;
   --primary-clr: #ff7e1b;
+  --primary-clr-btn-shadow: #ff7e1b83;
   --primary-clr-very-light: #ffeee2;
   --text-primary-clr: #1d2026;
   --text-secondary-clr: #69707d;
   --text-color-line-through: #b6bcc8;
+  --number-input-background: #f6f8fd;
 
   --heading-font-size: 2.8rem;
 }
