--- a/src/components/ImgSlider/ImgSlider.module.scss
+++ b/src/components/ImgSlider/ImgSlider.module.scss
@@ -1,7 +1,9 @@
 @import "../../Variables.scss";
 
 .imgSlider {
-  max-width: 100vw;
+  width: 100vw;
+  height: 30rem;
+  object-fit: cover;
 }
 
 .imgWrapper {
@@ -41,5 +43,22 @@
 
   &-right {
     transform: translateX(0.2rem);
+  }
+}
+
+@media (min-width: 33.5em) {
+  .imgSlider {
+    width: 90vw;
+    height: 40rem;
+  }
+
+  .btnWrapper {
+    padding: 0 5.6rem;
+  }
+}
+
+@media (min-width: 43.75em) {
+  .imgSlider {
+    height: 45rem;
   }
 }
