--- a/src/components/Sneakers/SneakersInfo.module.scss
+++ b/src/components/Sneakers/SneakersInfo.module.scss
@@ -68,3 +68,14 @@
   color: var(--text-color-line-through);
   text-decoration: line-through;
 }
+
+@media (min-width: 33.5em) {
+  .wrapper {
+    margin: auto auto;
+    max-width: 80%;
+  }
+
+  .company {
+    margin-top: 2.4rem;
+  }
+}
