--- a/src/components/Sneakers/SneakersInfo.module.scss
+++ b/src/components/Sneakers/SneakersInfo.module.scss
@@ -79,3 +79,23 @@
     margin-top: 2.4rem;
   }
 }
+
+@media (min-width: 56.25em) {
+  .wrapper {
+    max-width: 70%;
+  }
+
+  .page-header {
+    margin-bottom: 3.2rem;
+    line-height: 4.8rem;
+  }
+
+  .company {
+    margin-bottom: 2.7rem;
+  }
+
+  .price-wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
