--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -7,6 +7,7 @@
   --text-secondary-clr: #69707d;
   --text-color-line-through: #b6bcc8;
   --number-input-background: #f6f8fd;
+  --header-border-btm: #e4e9f2;
 
   --heading-font-size: 2.8rem;
 }
