--- a/src/components/ImgSlider/ImgSlider.module.scss
+++ b/src/components/ImgSlider/ImgSlider.module.scss
@@ -50,6 +50,20 @@
   display: none;
 }
 
+.sm-img {
+  border: 2px solid transparent;
+
+  &:hover {
+    cursor: pointer;
+    opacity: 0.5;
+  }
+}
+
+.active {
+  border: 2px solid var(--primary-clr);
+  opacity: 0.5;
+}
+
 @media (min-width: 33.5em) {
   .imgSlider {
     width: 90vw;
