--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -9,6 +9,7 @@ button {
   justify-content: space-between;
   padding: 2rem 2.4rem 2.8rem 2.4rem;
   align-items: center;
+  border-bottom: 1px solid var(--header-border-btm);
 }
 
 .menu-nav {
@@ -36,6 +37,8 @@ button {
 }
 
 .menu-nav-item {
+  position: relative;
+
   &:link,
   &:visited {
     text-decoration: none;
@@ -48,11 +51,28 @@ button {
   &:hover,
   &:active {
     color: var(--text-primary-clr);
+    &::after {
+      content: "";
+      position: absolute;
+      background-color: var(--primary-clr);
+      width: 100%;
+      height: 4px;
+      bottom: -1rem;
+      left: 0;
+    }
   }
 }
 
 .profile-img {
   max-width: 2.4rem;
+  border-radius: 50%;
+  border: 2px solid transparent;
+
+  &:hover {
+    cursor: pointer;
+    border-radius: 50%;
+    border: 2px solid var(--primary-clr);
+  }
 }
 
 .nav-left {
@@ -65,8 +85,34 @@ button {
   gap: 2.2rem;
 }
 
+.cart-button {
+  width: 2rem;
+  height: 2rem;
+  mask-image: url(../../images/icon-cart.svg);
+  -webkit-mask-image: url(../../images/icon-cart.svg);
+
+  background-color: var(--text-secondary-clr);
+  mask-size: 2rem 2rem;
+  -webkit-mask-size: 2rem 2rem;
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  margin-right: 1.5rem;
+
+  &:hover,
+  &:active {
+    cursor: pointer;
+    background-color: var(--text-primary-clr);
+  }
+}
+
 .active {
   display: block;
+}
+
+@media (min-width: 33.5em) {
+  .menu-nav {
+    width: 33%;
+  }
 }
 
 @media (min-width: 56.25em) {
@@ -93,6 +139,21 @@ button {
     align-items: center;
     flex-direction: row;
     gap: 3.2rem;
+  }
+
+  .menu-nav-item {
+    &:hover,
+    &:active {
+      &::after {
+        content: "";
+        position: absolute;
+        background-color: var(--primary-clr);
+        width: 100%;
+        height: 4px;
+        top: 6rem;
+        left: 0;
+      }
+    }
   }
 
   .nav-close {
