--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,10 +3,10 @@
     display: grid;
     grid-template-columns: 50% 50%;
     place-items: center;
-    margin-top: 12.5rem;
+    margin-top: 8.5rem;
   }
 
-  .testing {
+  .wrapper {
     margin: auto auto;
     max-width: 90vw;
   }
