--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -6,19 +6,27 @@
   right: 2.5%;
   max-width: 30rem;
   width: 100%;
-  height: 25.6rem;
+  min-height: 25.6rem;
   background-color: var(--white);
   border-radius: 1rem;
   z-index: 12;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.3);
 }
 
-.cart-name {
+.cart-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2.4rem;
+  border-bottom: 1px solid var(--header-border-btm);
+}
+
+.cart-name,
+.cost {
   font-size: 1.6rem;
   font-weight: 700;
   line-height: 1.984rem;
   color: var(--text-primary-clr);
-  padding: 2.4rem 0 2.7rem 2.4rem;
-  border-bottom: 1px solid var(--header-border-btm);
 }
 
 .empty {
@@ -27,18 +35,49 @@
   line-height: 2.6rem;
   text-align: center;
   color: var(--text-secondary-clr);
+  margin-top: 7.7rem;
+}
+
+.items-btn-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2.4rem;
+}
+
+.items-wrapper {
+  overflow: scroll;
+  max-height: 25.6rem;
+  width: 85%;
+}
+
+.items {
+  margin-top: 2.4rem;
+}
+
+.checkout {
+  max-width: 85%;
+  width: 100%;
+  height: 5.6rem;
+  background-color: var(--primary-clr);
+  color: var(--white);
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.984rem;
+  border-radius: 1rem;
+  margin-bottom: 3.2rem;
 }
 
 @media (min-width: 23.4375em) {
   .wrapper {
-    position: absolute;
-    top: 8rem;
-    right: 2.5%;
     max-width: 36rem;
-    width: 100%;
-    height: 25.6rem;
-    background-color: var(--white);
-    border-radius: 1rem;
-    z-index: 12;
+  }
+}
+
+@media (min-width: 33.5em) {
+  .wrapper {
+    top: 10rem;
+    right: 3.5%;
   }
 }
