--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -13,15 +13,16 @@ button {
 }
 
 .menu-nav {
-  display: none;
   position: absolute;
   top: 0;
   left: 0;
   background-color: var(--white);
   width: 66%;
-  height: 100vh;
-  z-index: 10;
+  height: 100%;
+  z-index: 13;
   padding: 2.5rem 0 0 2.5rem;
+  transition: 1s;
+  transform: translateX(-105%);
 }
 
 .nav-close {
@@ -63,16 +64,14 @@ button {
   }
 }
 
-.profile-img {
-  max-width: 2.4rem;
-  border-radius: 50%;
-  border: 2px solid transparent;
-
-  &:hover {
-    cursor: pointer;
-    border-radius: 50%;
-    border: 2px solid var(--primary-clr);
-  }
+.backdrop {
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100vw;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 12;
 }
 
 .nav-left {
@@ -85,33 +84,74 @@ button {
   gap: 2.2rem;
 }
 
-.cart-button {
-  width: 2rem;
-  height: 2rem;
-  mask-image: url(../../images/icon-cart.svg);
-  -webkit-mask-image: url(../../images/icon-cart.svg);
+.cart {
+  position: relative;
+  &-button {
+    width: 2rem;
+    height: 2rem;
+    mask-image: url(../../images/icon-cart.svg);
+    -webkit-mask-image: url(../../images/icon-cart.svg);
 
-  background-color: var(--text-secondary-clr);
-  mask-size: 2rem 2rem;
-  -webkit-mask-size: 2rem 2rem;
-  mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
-  margin-right: 1.5rem;
+    background-color: var(--text-secondary-clr);
+    mask-size: 2rem 2rem;
+    -webkit-mask-size: 2rem 2rem;
+    mask-repeat: no-repeat;
+    -webkit-mask-repeat: no-repeat;
+    margin-right: 1.5rem;
 
-  &:hover,
-  &:active {
+    &:hover,
+    &:active {
+      cursor: pointer;
+      background-color: var(--text-primary-clr);
+    }
+  }
+}
+
+.badge {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: -3px;
+  right: 8px;
+  width: 1.9rem;
+  height: 1.5rem;
+  background-color: var(--primary-clr);
+  color: var(--white);
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.24rem;
+  border-radius: 0.65rem;
+  padding-top: 0.2rem;
+}
+
+.profile-img {
+  max-width: 2.4rem;
+  border-radius: 50%;
+  border: 2px solid transparent;
+
+  &:hover {
     cursor: pointer;
-    background-color: var(--text-primary-clr);
+    border-radius: 50%;
+    border: 2px solid var(--primary-clr);
   }
 }
 
 .active {
-  display: block;
+  transform: none;
 }
 
 @media (min-width: 33.5em) {
   .menu-nav {
     width: 33%;
+  }
+
+  .badge {
+    top: 5px;
+  }
+
+  .profile-img {
+    max-width: 4rem;
   }
 }
 
@@ -132,6 +172,7 @@ button {
     height: revert;
     z-index: revert;
     padding: 0;
+    transform: none;
   }
 
   .menu-nav-list {
@@ -139,6 +180,10 @@ button {
     align-items: center;
     flex-direction: row;
     gap: 3.2rem;
+
+    &:last-child {
+      margin-right: 4rem;
+    }
   }
 
   .menu-nav-item {
@@ -162,6 +207,10 @@ button {
 
   .nav-open {
     display: none;
+  }
+
+  .badge {
+    top: 10px;
   }
 
   .profile-img {
