--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -13,7 +13,7 @@ html {
 body {
   box-sizing: border-box;
   font-family: "Kumbh Sans", sans-serif;
-  position: relative;
+  // position: relative;
 }
 
 @media (min-width: 56.25em) {
