--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -47,9 +47,28 @@
 }
 
 .items-wrapper {
-  overflow: scroll;
+  overflow-y: scroll;
   max-height: 25.6rem;
   width: 85%;
+
+  &::-webkit-scrollbar {
+    background-color: #fff;
+    width: 16px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: #fff;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #babac0;
+    border-radius: 16px;
+    border: 4px solid #fff;
+  }
+
+  &::-webkit-scrollbar-button {
+    display: none;
+  }
 }
 
 .items {
